--- a/index.html
+++ b/index.html
@@ -473,5 +473,87 @@
         </div>
       </div>
     </footer>
+    <div class="modal-container">
+      <div class="modal-window">
+        <button type="button" class="modal-btn">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-label-container">
+              <input
+                id="user-name"
+                name="user-name"
+                type="text"
+                class="label-input"
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="phone">Phone</label>
+            <div class="modal-label-container">
+              <input
+                id="user-name"
+                name="user-name"
+                type="text"
+                class="label-input"
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="email">Email</label>
+            <div class="modal-label-container">
+              <input
+                id="user-name"
+                name="user-name"
+                type="text"
+                class="label-input"
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-container">
+            <label class="modal-form-label">Comment</label>
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              class="form-textarea"
+            ></textarea>
+          </div>
+          <div class="checkbox-container">
+            <input
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              class="checkbox-input visually-hidden"
+            />
+            <span class="checkbox-text-span">
+              <svg class="checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-check-mark"></use>
+              </svg>
+            </span>
+            <label for="user-privacy" class="checkbox-text">
+              I accept the terms and conditions of the
+              <a class="modal-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-btn" type="button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
