--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
               </svg>
             </span>
           </div>
-          <button class="form-btn" type="button">Send</button>
+          <button class="form-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
