--- a/index.html
+++ b/index.html
@@ -471,6 +471,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-input-container">
+          <p class="footer-input-paragraph">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                name="your-subscribe"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-form-btn">
+              Subscribe<svg class="footer-input-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="modal-container">
