--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             </label>
             <button type="submit" class="footer-form-btn">
               Subscribe<svg class="footer-input-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-Frame-3"></use>
+                <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
           </form>
