--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container">
+    <div class="modal-container is-open">
       <div class="modal-window">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -551,23 +551,28 @@
               class="form-textarea"
             ></textarea>
           </div>
-          <label for="user-privacy" class="checkbox-text">
-            I accept the terms and conditions of the
-            <a class="modal-link" href="">Privacy Policy</a>
-          </label>
-          <div class="checkbox-container">
+          <div class="modal-form-container">
             <input
-              id="user-privacy"
               type="checkbox"
               value="true"
+              id="user-privacy"
+              class="form-check visually-hidden"
               name="user-privacy"
-              class="checkbox-input visually-hidden"
             />
-            <span class="checkbox-text-span">
-              <svg class="checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-check-mark"></use>
-              </svg>
-            </span>
+            <label for="user-privacy" class="check-text"
+              ><span class="user-span"
+                ><svg>
+                  <use
+                    href="./images/icons.svg#icon-check"
+                    width="10"
+                    height="8"
+                    class="check-icon"
+                  ></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="">Privacy Policy</a>
+            </label>
           </div>
           <button class="form-btn" type="submit">Send</button>
         </form>
