--- a/index.html
+++ b/index.html
@@ -561,17 +561,12 @@
             />
             <label for="user-privacy" class="check-text"
               ><span class="user-span"
-                ><svg>
-                  <use
-                    href="./images/icons.svg#icon-check"
-                    width="10"
-                    height="8"
-                    class="check-icon"
-                  ></use>
+                ><svg width="10" height="8" class="check-icon">
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="">Privacy Policy</a>
+              <a href="" class="check-link">Privacy Policy</a>
             </label>
           </div>
           <button class="form-btn" type="submit">Send</button>
