--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
               class="form-textarea"
             ></textarea>
           </div>
-          <div class="modal-form-container">
+          <div class="check-form-container">
             <input
               type="checkbox"
               value="true"
