--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container is-open">
+    <div class="modal-container">
       <div class="modal-window">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
